--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@jaxben98/emoji-farm",
-    "version": "4.3.0",
+    "version": "4.4.0",
     "description": "Get instant emojis that you can add onto strings",
-    "license": "GNU General Public License",
+    "license": "GNU General Public License v3.0",
     "repository": "PandaBoi57/emoji-farm",
     "main": "src/index.js",
     "keywords": [
